--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,16 @@
 Package: qSIPsim
-Title: What the Package Does (One Line, Title Case)
+Title: qSIP Data Simulation
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Jeff", "Kimbrel", , "kimbrel1@llnl.gov", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-7213-9392"))
+Description: Simulates data for qSIP analysis.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+URL: https://github.com/jeffkimbrel/qSIPsim
+BugReports: https://github.com/jeffkimbrel/qSIPsim/issues
