added skewed distribution data added create_sample_data function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: qSIPsim
 Title: qSIP Data Simulation
-Version: 0.0.0.9000
+Version: 0.0.0.9001
 Authors@R: 
     person("Jeff", "Kimbrel", , "kimbrel1@llnl.gov", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7213-9392"))
@@ -14,3 +14,9 @@ Suggests:
 Config/testthat/edition: 3
 URL: https://github.com/jeffkimbrel/qSIPsim
 BugReports: https://github.com/jeffkimbrel/qSIPsim/issues
+Depends: 
+    R (>= 2.10)
+LazyData: true
+Imports: 
+    dplyr,
+    tidyr
